# KiiThingSDK

./: .gitignore  00-first_setup.c  01-second_setup.c  CMakeLists.txt  README.md  kiicloud.h  raspberry.cmake  toolchain-crosscompiler-example.cmake  toolchain-rpi.cmake
KiiThingSDK/: .gitignore  CMakeLists.txt  KiiThingSDK.h  KiiThingSDK.m  Makefile  README.md  doxyfile  kii_cloud.c  kii_cloud.h  kii_custom.c  kii_custom.h  kii_http_adapter.h  kii_libc.c  kii_libc.h  kii_logger.c  kii_logger.h  kii_prv_http_adapter.h  kii_prv_http_curl.c  kii_prv_http_execute.h  kii_prv_http_execute_curl.c  kii_prv_http_execute_ssl.c  kii_prv_types.h  kii_prv_utils.c  kii_prv_utils.h  kii_utils.c  kii_utils.h
KiiThingSDK.xcodeproj/: project.pbxproj
KiiThingSDK.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
KiiThingSDK.xcodeproj/project.xcworkspace/xcshareddata/: KiiThingSDK.xccheckout
KiiThingSDK.xcodeproj/xcshareddata/xcschemes/: KiiThingSDKTests.xcscheme
KiiThingSDK/extlibs/: hashtable.c
KiiThingSDK/httpclient/: kii_prv_http_execute_curl.c  kii_prv_http_execute_ssl.c
KiiThingSDK/jansson/: Makefile  jansson_config.h
KiiThingSDK/openssl.framework/Headers/: opensslconf.h
KiiThingSDKTests/: Info.plist  KiiThingSDKTests.mm  LibUsateTests.m  ThingSDKBasicTests.m  ThingSDKLargeTests.m  ThingSDKUsageTest.m  ThingSDKUsageTest.mm  URLBuilderTest.m  test.json
cmake_utils/: FindCURL.cmake  FindJansson.cmake  compileroptions.cmake
